# NCTU-HomeWork

./: Bubble Sort.c  Cake's Area.c  Fibonacci Sequence.c  Multiplier.c  Prime Factorization.c  README.md  Schedule.c  my_bisection.m  shooting.rar  why_not_loop.m
Assignment 1/: 0416106.docx  bisection.m  fixed_point.m  main.asm  multivariable_newton3.m  newton.m  secant.m
Assignment 2/: 0416106.docx  Cholesky.m  GaussSeidel.m  Jacobi.m  asm02_0416106.asm
Assignment 3/: asm03_0416106.asm  asm03_0416106.docx  bezier_surface.m  bspline_plot.m  cubic_spline.m  cubic_spline_extra.m  divided_difference.m  divided_difference_iter.m  lagrange.m  least_square_cubic_fit.m  least_square_line.m  least_square_line_fit.m  least_square_quadratic.m  least_square_quadratic_fit.m
Assignment 4/: trapezoidal_rule.m
Assignment 5/: euler_method.xlsx  midpoint_method.xlsx
CO_Lab0_2017-ModelSim Tutorial/: Test.v
CO_Lab2_2017/: ALU.v  Shifter.v  Testbench.v
CO_Lab3_2017/: ALU.v  ALU_1bit.v  ALU_Ctrl.v  ALU_bit31.v  Adder.v  CO_document.docx  Decoder.v  Mux2to1.v  Mux3to1.v  Shifter.v  Sign_Extend.v  Simple_Single_CPU.v  TestBench.v  Zero_Filled.v
CO_Lab4_2017/: CO_P4_result.txt  CO_P4_test_data3.txt  CO_P4_test_data4.txt  CO_P4_test_data5.txt  CO_P4_test_data6.txt  CO_document.docx  Decoder.v  Full_adder.v  Jump_address.v  Mux2to1.v  Mux3to1.v  Mux4to1.v  Program_Counter.v  Reg_File.v  Simple_Single_CPU.v  test1.txt  test2.txt
CO_Lab6_2017/: ALU.v  ALU_1bit.v  ALU_Ctrl.v  ALU_bit31.v  Adder.v  CO_document.docx  Decoder.v  EX_MEM_register.v  Forwarding_Unit.v  Hazard_Detection_Unit.v  ID_EX_register.v  IF_ID_register.v  MEM_WB_register.v  Pipeline_CPU.v  Program_Counter.v  Shift_left_2.v  TestBench.v  lab6.cr.mti  lab6.mpf  transcript  vsim.wlf
CO_lab5_2017/: CO_P5_test1_ASM.txt  CO_P5_test2_ASM.txt  CO_P5_test_data1.txt  (+12 more)
Exercise 1/: CMakeLists.txt  algo_hw1.hpp  algo_hw1test.cpp  algo_test.cpp  main.cpp
Exercise 1/cmake/: getBenchmark.cmake  getGTest.cmake
Exercise 1/cmake/Modules/: FindBenchmark.cmake
Final Project/cuda_version/: CMakeLists.txt  README.md  build.sh  convolution.cu  filter.h  filter.txt  image.cpp  image.h
(+450 files in other folders)
